[package]
name = "sensd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15"
pid = "4.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }
