[package]
name = "sensd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
custom_error = "1.9.2"
dotenv = "0.15"
float-cmp = "0.9.0"
pid = "4.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }
